2013-05-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/lisp-mode.el (lisp-mode-shared-map): Inherit from
	prog-mode-map.

2013-05-29  Leo Liu  <sdl.web@gmail.com>

	* progmodes/octave.el (octave-indent-comment): Tweak regexps.
	(octave-help): Small simplification.

	* emacs-lisp/smie.el (smie-highlight-matching-block): Always turn
	off the highlight first.

2013-05-29  Glenn Morris  <rgm@gnu.org>

	* progmodes/idlwave.el (idlwave-concatenate-rinfo-lists):
	Handle idlwave-last-system-routine-info-cons-cell being nil.

	* progmodes/idlwave.el (idlwave-scan-user-lib-files)
	(idlwave-write-paths): Simplify via with-temp-buffer.

	* emulation/cua-gmrk.el: Also load cua-base, cua-rect at run time.
	* emulation/cua-rect.el: Also load cua-base at run time.

	* progmodes/cperl-mode.el (imenu-choose-buffer-index)
	(file-of-tag, etags-snarf-tag, etags-goto-tag-location): Declare.
	(cperl-imenu-on-info): Require imenu.

2013-05-28  Alan Mackenzie  <acm@muc.de>

	Handle "capitalised keywords" correctly.
	* progmodes/cc-mode.el (c-after-change): Bind case-fold-search to nil.

2013-05-28  Aidan Gauland  <aidalgol@amuri.net>

	* eshell/em-unix.el: Added -r option to cp

2013-05-28  Glenn Morris  <rgm@gnu.org>

	* vc/vc-arch.el (vc-exec-after): Declare.
	(vc-switches): Autoload.
	* vc/vc-bzr.el: No need to require vc when compiling.
	(vc-exec-after, vc-set-async-update, vc-default-dir-printer)
	(vc-resynch-buffer, vc-dir-refresh): Declare.
	(vc-setup-buffer, vc-switches): Autoload.
	* vc/vc-cvs.el (vc-exec-after, vc-coding-system-for-diff)
	(vc-resynch-buffer): Declare.
	(vc-switches, vc-default-revert, vc-version-backup-file): Autoload.
	* vc/vc-dir.el (desktop-missing-file-warning): Declare.
	* vc/vc-git.el (vc-exec-after, vc-set-async-update)
	(grep-read-regexp, grep-read-files, grep-expand-template)
	(vc-dir-refresh): Declare.
	(vc-setup-buffer, vc-switches, vc-resynch-buffer): Autoload.
	* vc/vc-hg.el (vc-exec-after, vc-set-async-update): Declare.